# Discord-Bot

./: .bot.py.swp  .gitignore  Dockerfile  README.md  bot.py  config.json  data.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: runner.yml
cogs/: cog_template.txt  modrepls.py
data/: applications.json
